# tohoku-tts-voicevox

./: .gitignore  Cargo.toml  README.md  build.sh  download-deps.sh
src/: error.rs  lib.rs  main.rs  types.rs  vvc.rs
