[package]
name = "tohoku-tts-voicevox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.1", features = ["full"] }
vvcore = "0.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.3"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.21", features = ["derive"] }
hound = "3.5.1"
cpal = "0.15"
rubato = "0.16.1"

[profile.release]
rpath = true
